--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 
 	<div class="site-header">
 
-		<h1 class="site-header-logo-container"><a href="/"><span class="image-replace">WebsWeirdest.com</span><img src="images/ww-small.png" width="65" height="35" id="ww-logo" alt="WebsWeirdest"/></a></h1>
+		<h1 class="site-header-logo-container"><a href=""><span class="image-replace">WebsWeirdest.com</span><img src="images/ww-small.png" width="65" height="35" id="ww-logo" alt="WebsWeirdest"/></a></h1>
 
             <ul id="page-nav" class="horizontal-list">
 
-				<li class="page-nav-top-posts active"><a href="javascript:void(0)" id="feature-scroll" class="page-anchor-link">Newest Items</a></li>
+				<li class="page-nav-top-posts active"><a href="index.html" id="feature-scroll" class="page-anchor-link">Newest Items</a></li>
 
 				<li class="page-nav-popular-posts"><a href="javascript:void(0)" id="popular-scroll" class="page-anchor-link">Popular Items</a></li>
 
@@ -97,9 +97,9 @@
 
 				<ul id="menu-main-menu" class="menu">
 
-					<li id="menu-item-144" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-144"><a href="/">Home</a></li>
+					<li id="menu-item-144" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-144"><a href="index.html">Home</a></li>
 
-					<li id="menu-item-142" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-142"><a href="about.html">About</a></li>
+					<li id="menu-item-142" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-142">About</li>
 
 				</ul>
 
@@ -141,6 +141,9 @@
 
 			<p><h1>Welcome to Web's Weirdest.com, the site that is commited to bringing you the weirdest, the strangest and the most outlandish items on the internet. Be sure to check back often as it is constantly updated with new and weird items!</h1></p>
 
+		</div>
+		<div id="aboutContent">
+			<p><h1>This is a little introduction to Bigg, the free website template that might look a little fdfdbit like afdfdf popular site you’ve probably already heard of.  Can you guess what site I’m talking about? ;)</h1></p>
 		</div><!-- end .entry-content -->
 
 </div><!-- end .postclass -->
@@ -218,22 +221,19 @@
 
 			<div class="social-links">
 
-				<img id="img_Facebook" src="images/social_media_button_facebook.png">
-				<img id="img_Twitter" src="images/social_media_button_twitter.png">
-				<img id="img_Pintrest" src="images/social_media_button_pintrest.png">
-				<img id="img_Favorite" src="images/social_media_button_favorite.png">
+				<a  class="likeLink" data-imageid="Slippers" ><img  id="img_Favorite" src="images/social_media_button_favorite.png"><span class="likes">0</span></a>
 
 				<a id="facebook-share" alt="Share on Facebook" title="Share on Facebook" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=250'); return false;"
 				href="https://www.facebook.com/sharer/sharer.php?u=https%3A//www.amazon.ca/Funny-Winter-Plush-Slippers-Novelty/dp/B00PU3AL9C/ref=pd_sbs_21_13?_encoding=UTF8%26psc=1%26refRID=6D7T2GM40CSS3HRTVXVM">
-				</a>
+				<img id="img_Facebook" src="images/social_media_button_facebook.png"></a>
 
 				<a id="twitter-share" alt="Share on Twitter" title="Share on Twitter" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=500'); return false;"
 				href="https://twitter.com/home?status=https%3A//www.facebook.com/sharer/sharer.php?u=https%253A//www.amazon.ca/Funny-Winter-Plush-Slippers-Novelty/dp/B00PU3AL9C/ref=pd_sbs_21_13?_encoding=UTF8%2526psc=1%2526refRID=6D7T2GM40CSS3HRTVXVM">
-				</a>
+				<img id="img_Twitter" src="images/social_media_button_twitter.png"></a>
 
 				<a id="pintrest-share" alt="Share on Pintrest" title="Share on Pintrest" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=500'); return false;"
 				href="https://pinterest.com/pin/create/button/?url=https%3A//twitter.com/home?status=https%253A//www.facebook.com/sharer/sharer.php?u=https%25253A//www.amazon.ca/Funny-Winter-Plush-Slippers-Novelty/dp/B00PU3AL9C/ref=pd_sbs_21_13?_encoding=UTF8%252526psc=1%252526refRID=6D7T2GM40CSS3HRTVXVM&media=https%3A//images-na.ssl-images-amazon.com/images/I/515FZYW%252BiuL.jpg&description=">
-				</a>
+				<img id="img_Pintrest" src="images/social_media_button_pintrest.png"></a>
 
 			</div>
 
@@ -251,22 +251,19 @@
 
 			<div class="social-links">
 
-				<img id="img_Facebook" src="images/social_media_button_facebook.png">
-				<img id="img_Twitter" src="images/social_media_button_twitter.png">
-				<img id="img_Pintrest" src="images/social_media_button_pintrest.png">
-				<img id="img_Favorite" src="images/social_media_button_favorite.png">
+				<a  class="likeLink" data-imageid="Talkie Toys" ><img  id="img_Favorite" src="images/social_media_button_favorite.png"><span class="likes">0</span></a>
 
 				<a id="facebook-share" alt="Share on Facebook" title="Share on Facebook" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=250'); return false;"
 				href="https://www.facebook.com/sharer/sharer.php?u=https%3A//www.amazon.com/Talkie-Toys-Products-Fuck-Button/dp/B00MIA3S7W/ref=pd_sim_21_5?_encoding=UTF8%26pd_rd_i=B00MIA3S7W%26pd_rd_r=9AQRD1VXFV7YKVW3HBF6%26pd_rd_w=P4C3y%26pd_rd_wg=eWrSz%26psc=1%26refRID=9AQRD1VXFV7YKVW3HBF6">
-				</a>
+				<img id="img_Facebook" src="images/social_media_button_facebook.png"></a>
 
 				<a id="twitter-share" alt="Share on Twitter" title="Share on Twitter" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=500'); return false;"
 				href="https://twitter.com/home?status=https%3A//www.amazon.com/Talkie-Toys-Products-Fuck-Button/dp/B00MIA3S7W/ref=pd_sim_21_5?_encoding=UTF8%26pd_rd_i=B00MIA3S7W%26pd_rd_r=9AQRD1VXFV7YKVW3HBF6%26pd_rd_w=P4C3y%26pd_rd_wg=eWrSz%26psc=1%26refRID=9AQRD1VXFV7YKVW3HBF6">
-				</a>
+				<img id="img_Twitter" src="images/social_media_button_twitter.png"></a>
 
 				<a id="pintrest-share" alt="Share on Pintrest" title="Share on Pintrest" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=500'); return false;"
 				href="https://pinterest.com/pin/create/button/?url=https%3A//www.amazon.com/Talkie-Toys-Products-Fuck-Button/dp/B00MIA3S7W/ref=pd_sim_21_5?_encoding=UTF8%26pd_rd_i=B00MIA3S7W%26pd_rd_r=9AQRD1VXFV7YKVW3HBF6%26pd_rd_w=P4C3y%26pd_rd_wg=eWrSz%26psc=1%26refRID=9AQRD1VXFV7YKVW3HBF6&media=https%3A//images-na.ssl-images-amazon.com/images/I/41dv3EzQFoL.jpg&description=">
-				</a>
+				<img id="img_Pintrest" src="images/social_media_button_pintrest.png"></a>
 
 			</div>
 
@@ -284,22 +281,20 @@
 
 			<div class="social-links">
 
-				<img id="img_Facebook" src="images/social_media_button_facebook.png">
-				<img id="img_Twitter" src="images/social_media_button_twitter.png">
-				<img id="img_Pintrest" src="images/social_media_button_pintrest.png">
-				<img id="img_Favorite" src="images/social_media_button_favorite.png">
+				<a  class="likeLink" data-imageid="Bathroom Spinner" ><img  id="img_Favorite" src="images/social_media_button_favorite.png"><span class="likes">0</span></a>
 
 				<a id="facebook-share" alt="Share on Facebook" title="Share on Facebook" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=250'); return false;"
 				href="https://www.facebook.com/sharer/sharer.php?u=https%3A//www.amazon.com/Bathroom-Door-Toilet-Time-Spinner/dp/B01MTK2OE8/ref=pd_rhf_dp_s_cp_1?_encoding=UTF8%26pd_rd_i=B01MTK2OE8%26pd_rd_r=0GFHNSJRS2TQFQ6SNWRA%26pd_rd_w=hVE2w%26pd_rd_wg=Dk2cl%26psc=1%26refRID=0GFHNSJRS2TQFQ6SNWRA">
-				</a>
+				<img id="img_Facebook" src="images/social_media_button_facebook.png"></a>
 
 				<a id="twitter-share" alt="Share on Twitter" title="Share on Twitter" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=500'); return false;"
 				href="https://twitter.com/home?status=https%3A//www.facebook.com/sharer/sharer.php?u=https%253A//www.amazon.com/Bathroom-Door-Toilet-Time-Spinner/dp/B01MTK2OE8/ref=pd_rhf_dp_s_cp_1?_encoding=UTF8%2526pd_rd_i=B01MTK2OE8%2526pd_rd_r=0GFHNSJRS2TQFQ6SNWRA%2526pd_rd_w=hVE2w%2526pd_rd_wg=Dk2cl%2526psc=1%2526refRID=0GFHNSJRS2TQFQ6SNWRA">
-				</a>
+				<img id="img_Twitter" src="images/social_media_button_twitter.png"></a>
 
 				<a id="pintrest-share" alt="Share on Pintrest" title="Share on Pintrest" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=500'); return false;"
 				href="https://pinterest.com/pin/create/button/?url=https%3A//images-na.ssl-images-amazon.com/images/I/91CvuY01d1L._SL1500_.jpg&media=https%3A//twitter.com/home?status=https%253A//www.facebook.com/sharer/sharer.php?u=https%25253A//www.amazon.com/Bathroom-Door-Toilet-Time-Spinner/dp/B01MTK2OE8/ref=pd_rhf_dp_s_cp_1?_encoding=UTF8%252526pd_rd_i=B01MTK2OE8%252526pd_rd_r=0GFHNSJRS2TQFQ6SNWRA%252526pd_rd_w=hVE2w%252526pd_rd_wg=Dk2cl%252526psc=1%252526refRID=0GFHNSJRS2TQFQ6SNWRA&description=">
-				</a>
+				<img id="img_Pintrest" src="images/social_media_button_pintrest.png"></a>
+
 
 			</div>
 
@@ -317,22 +312,19 @@
 
 			<div class="social-links">
 
-				<img id="img_Facebook" src="images/social_media_button_facebook.png">
-				<img id="img_Twitter" src="images/social_media_button_twitter.png">
-				<img id="img_Pintrest" src="images/social_media_button_pintrest.png">
-				<img id="img_Favorite" src="images/social_media_button_favorite.png">
+				<a  class="likeLink" data-imageid="Bacon Toothpaste" ><img  id="img_Favorite" src="images/social_media_button_favorite.png"><span class="likes">0</span></a>
 
 				<a id="facebook-share" alt="Share on Facebook" title="Share on Facebook" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=250'); return false;"
 				href="https://www.facebook.com/sharer/sharer.php?u=https%3A//www.amazon.com/Mr-Bacons-Bacon-Flavored-Toothpaste/dp/B00KIZBURY/ref=pd_sim_21_10?_encoding=UTF8%26pd_rd_i=B00KIZBURY%26pd_rd_r=PYE16DZ1N39C7EVZN6RN%26pd_rd_w=Ib3bo%26pd_rd_wg=nHIsv%26psc=1%26refRID=PYE16DZ1N39C7EVZN6RN">
-				</a>
+				<img id="img_Facebook" src="images/social_media_button_facebook.png"></a>
 
 				<a id="twitter-share" alt="Share on Twitter" title="Share on Twitter" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=500'); return false;"
 				href="https://twitter.com/home?status=https%3A//www.facebook.com/sharer/sharer.php?u=https%253A//www.amazon.com/Mr-Bacons-Bacon-Flavored-Toothpaste/dp/B00KIZBURY/ref=pd_sim_21_10?_encoding=UTF8%2526pd_rd_i=B00KIZBURY%2526pd_rd_r=PYE16DZ1N39C7EVZN6RN%2526pd_rd_w=Ib3bo%2526pd_rd_wg=nHIsv%2526psc=1%2526refRID=PYE16DZ1N39C7EVZN6RN">
-				</a>
+				<img id="img_Twitter" src="images/social_media_button_twitter.png"></a>
 
 				<a id="pintrest-share" alt="Share on Pintrest" title="Share on Pintrest" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=500'); return false;"
 				href="https://pinterest.com/pin/create/button/?url=https%3A//images-na.ssl-images-amazon.com/images/I/61h8kr%252Byb6L._SX522_.jpg&media=https%3A//twitter.com/home?status=https%253A//www.facebook.com/sharer/sharer.php?u=https%25253A//www.amazon.com/Mr-Bacons-Bacon-Flavored-Toothpaste/dp/B00KIZBURY/ref=pd_sim_21_10?_encoding=UTF8%252526pd_rd_i=B00KIZBURY%252526pd_rd_r=PYE16DZ1N39C7EVZN6RN%252526pd_rd_w=Ib3bo%252526pd_rd_wg=nHIsv%252526psc=1%252526refRID=PYE16DZ1N39C7EVZN6RN&description=">
-				</a>
+				<img id="img_Pintrest" src="images/social_media_button_pintrest.png"></a>
 
 			</div>
 
@@ -350,22 +342,19 @@
 
 			<div class="social-links">
 
-				<img id="img_Facebook" src="images/social_media_button_facebook.png">
-				<img id="img_Twitter" src="images/social_media_button_twitter.png">
-				<img id="img_Pintrest" src="images/social_media_button_pintrest.png">
-				<img id="img_Favorite" src="images/social_media_button_favorite.png">
+				<a  class="likeLink" data-imageid="Kitty Cat" ><img  id="img_Favorite" src="images/social_media_button_favorite.png"><span class="likes">0</span></a>
 
 				<a id="facebook-share" alt="Share on Facebook" title="Share on Facebook" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=250'); return false;"
 				href="https://www.facebook.com/sharer/sharer.php?u=https%3A//www.amazon.com/Mr-Bacons-Bacon-Flavored-Toothpaste/dp/B00KIZBURY/ref=pd_sim_21_10?_encoding=UTF8%26pd_rd_i=B00KIZBURY%26pd_rd_r=PYE16DZ1N39C7EVZN6RN%26pd_rd_w=Ib3bo%26pd_rd_wg=nHIsv%26psc=1%26refRID=PYE16DZ1N39C7EVZN6RN">
-				</a>
+				<img id="img_Facebook" src="images/social_media_button_facebook.png"></a>
 
 				<a id="twitter-share" alt="Share on Twitter" title="Share on Twitter" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=500'); return false;"
 				href="https://twitter.com/home?status=https%3A//www.facebook.com/sharer/sharer.php?u=https%253A//www.amazon.com/Mr-Bacons-Bacon-Flavored-Toothpaste/dp/B00KIZBURY/ref=pd_sim_21_10?_encoding=UTF8%2526pd_rd_i=B00KIZBURY%2526pd_rd_r=PYE16DZ1N39C7EVZN6RN%2526pd_rd_w=Ib3bo%2526pd_rd_wg=nHIsv%2526psc=1%2526refRID=PYE16DZ1N39C7EVZN6RN">
-				</a>
+				<img id="img_Twitter" src="images/social_media_button_twitter.png"></a>
 
 				<a id="pintrest-share" alt="Share on Pintrest" title="Share on Pintrest" target="_blank" OnClick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=500'); return false;"
 				href="https://pinterest.com/pin/create/button/?url=https%3A//images-na.ssl-images-amazon.com/images/I/61h8kr%252Byb6L._SX522_.jpg&media=https%3A//twitter.com/home?status=https%253A//www.facebook.com/sharer/sharer.php?u=https%25253A//www.amazon.com/Mr-Bacons-Bacon-Flavored-Toothpaste/dp/B00KIZBURY/ref=pd_sim_21_10?_encoding=UTF8%252526pd_rd_i=B00KIZBURY%252526pd_rd_r=PYE16DZ1N39C7EVZN6RN%252526pd_rd_w=Ib3bo%252526pd_rd_wg=nHIsv%252526psc=1%252526refRID=PYE16DZ1N39C7EVZN6RN&description=">
-				</a>
+				<img id="img_Pintrest" src="images/social_media_button_pintrest.png"></a>
 
 			</div>
 
@@ -402,7 +391,7 @@
 
 </div>
 <script src="js/main.js"></script>
-<script src="js/likeCounter.js"></script>
+
 
 
 </body>
